# matyan-frontier

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml  release.yml
scripts/: smoke_test.py
src/matyan_frontier/: app.py  cli.py  config.py  health.py  log_context.py  logging.py  metrics.py
src/matyan_frontier/kafka/: __init__.py  _security.py  producer.py
src/matyan_frontier/rest/: __init__.py  artifacts.py
src/matyan_frontier/ws/: __init__.py  handler.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_health.py  test_kafka_producer.py  test_kafka_security.py  test_log_context.py  test_logging.py  test_metrics.py  test_rest_artifacts.py  test_version.py  test_ws_handler.py
