[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "matyan-frontier"
dynamic = ["version"]
description = "Ingestion gateway: WebSocket + presigned S3 URLs, publishes to Kafka"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["experiment-tracking", "ingestion", "websocket", "kafka"]

authors = [
    { name = "Tigran Grigoryan", email = "grigoryan.tigran119@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
requires-python = ">=3.12, <4"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "loguru~=0.7.3",
    "aiokafka~=0.13",
    "click~=8.0",
    "prometheus-client~=0.21",
    "aioboto3>=7.0.0",
    "boto3>=1.42.53",
    "google-cloud-storage~=2.14",
    "gcloud-aio-storage~=9.3.0",
    "azure-storage-blob~=12.24",
    "azure-identity~=1.19",
    "matyan-api-models~=0.2.0",
]

[project.urls]
Homepage = "https://github.com/4gt-104/matyan-core"
Repository = "https://github.com/4gt-104/matyan-core"
Documentation = "https://4gt-104.github.io/matyan-core/"

[project.scripts]
matyan-frontier = "matyan_frontier.cli:main"

[tool.setuptools_scm]
fallback_version = "0.2.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FBT001",
    "FBT002",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "D417",
    "FBT003",
    "EXE002",
    "S311",
    "TD003",
    "D205",
    "PLR2004",
    "PLR0913",
    "S101",
    "S104",
]

[tool.coverage.run]
source = ["matyan_frontier"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[dependency-groups]
dev = [
    "pytest~=8.0",
    "httpx~=0.28",
    "websockets~=15.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio~=0.25",
    "types-aiobotocore-s3>=3.2.1",
]
